src/styles/notes-explorer.scss
@mixin fading($background) {
    background: linear-gradient(to left, $background, transparent 15px);
}

$pane-height: 30px;

.user-menu {
    font-size: $top-bar-font-size;

    &-toggle {
        line-height: $top-bar-height;
        height: $top-bar-height;

        &.btn.btn-link {
            color: $black;

            &:hover {
                background-color: $primary-light;
            }
        }
    }
    .close-explorer {
        line-height: $top-bar-height;
        height: $top-bar-height;
    }
}

.note-explorer {
    height: 100%;
    background-color: $gray-100;
    display: flex;
    flex-direction: column;

    .note-item-title {
        height: 1.5rem;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
    .note-explorer-item {
        color: $black;

        &:hover {
            text-decoration: none;
            background-color: $primary-light;

            .note-item-title:after {
                @include fading($primary-light);
            }
        }
        &.active {
            background-color: $primary;
            color: $white;

            .note-item-title:after {
                @include fading($primary);
            }
        }
    }
    .note-item-summary {
        min-height: 1rem;
        max-height: 3rem;
        overflow: hidden;
    }
}

.pane-header {
    @extend .px-1;
    color: $body-color;
    vertical-align: middle;
    user-select: none;
    border: $btn-border-width solid transparent;
    padding: $btn-padding-y $btn-padding-x;
    width: 100%;
    text-align: left;
    font-size: 80%;
    display: flex;
    line-height: 1rem;
    overflow: hidden;
    border-radius: 0;
    background-color: rgba(128, 128, 128, 0.2);

    .chevron {
        width: 12px;
        flex-shrink: 0;
    }
    .actions {
        flex: 1;
    }
    .btn-icon {
        margin-top: -5px;
    }
    &:focus {
      outline: 0;
      box-shadow: $btn-focus-box-shadow;
    }
}

.pane-body {
    overflow: auto;
    flex: 1;
}

.note-explorer-content {
    flex: 1;
    overflow: auto;
    display: flex;
    flex-direction: column;
}

.collapsible-pane {
    transition: flex-grow 0.3s ease-in-out;
    display: flex;
    flex-direction: column;
    overflow: hidden;

    &.collapsed {
        flex: 0 0 $pane-height;
    }
    &.expanded {
        flex-grow: 1;
        flex-basis: $pane-height;
    }
}

.utility-bar {
    max-height: 2.5rem;
    overflow: hidden;

    .spinner {
        position: absolute;
        top: 50%;
        margin: -0.5rem;
    }
}

.note-item-expand {
    display: inline-block;
    user-select: none;
    margin-top: -2px;

    &:hover {
        background: $light;
        color: $black;
    }

    svg {
        display: inline-block;
        font-size: 1.5rem;
        width: 1.5rem;
        margin-top: -3px;
    }
}

.expander {
    svg {
        transition: transform 0.2s;
        width: 1.25rem;
    }

    &.collapsed {
        svg {
            transform: rotate(-90deg);
        }
    }
}

.highlight {
    background-color: rgba(234, 92, 0, 0.33);
}

.search-box {
    input {
        padding-right: 3rem;
    }
}

.search-clear {
    position: absolute;
    right: .5rem;
    top: 50%;
    transform: translateY(-50%);

    &.btn-icon.btn-grow:active {
        transform: scale(1.5) translateY(-30%);
    }
    svg {
        user-select: none;
    }
}

.input-widget {
    position: fixed;
    width: 600px;
    padding-bottom: 6px;
    top: 20px;
    left: 50%;
    margin-left: -300px;
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 8px 2px;
    z-index: 100;
}

.navigate-item {
    display: block;
}

